# event-selector

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  cli-launcher.py  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  tox.ini
docs/: architecture.md
examples/: mk1_example.yaml  mk2_example.yaml
scripts/: build_rpm.sh  run_tests.sh
src/event_selector/: __init__.py  __main__.py  _version.py  main.py
src/event_selector/adapters/: __init__.py  exporter.py  importer.py  parser.py
src/event_selector/adapters/mk1/: __init__.py  strategy.py
src/event_selector/adapters/mk2/: __init__.py  strategy.py
src/event_selector/application/: __init__.py  base.py
src/event_selector/application/commands/: __init__.py  base.py  bulk_operations.py  toggle_event.py
src/event_selector/application/facades/: __init__.py  event_selector_facade.py
src/event_selector/application/queries/: __init__.py
src/event_selector/cli/: __init__.py  app.py
src/event_selector/core/: __init__.py  exporter.py  importer.py  models.py  parser.py  validator.py
src/event_selector/core/models/: __init__.py  base.py  constants.py  export.py  mk1.py  mk2.py  session.py  validation.py
src/event_selector/domain/: __init__.py
src/event_selector/domain/interfaces/: __init__.py  format_strategy.py
src/event_selector/domain/models/: __init__.py  base.py  mk1.py  mk2.py
src/event_selector/domain/services/: validation_service.py
src/event_selector/gui/: __init__.py  main_window.py
src/event_selector/gui/dialogs/: __init__.py  file_association_dialog.py  restore_dialog.py
src/event_selector/gui/tabs/: __init__.py  event_tab.py  subtab.py
src/event_selector/gui/widgets/: __init__.py  filter_widget.py  problems_dock.py  tri_state_checkbox.py
src/event_selector/infrastructure/: __init__.py
src/event_selector/infrastructure/config/: __init__.py  config_manager.py
src/event_selector/infrastructure/export/: __init__.py  mask_exporter.py
src/event_selector/infrastructure/exports/: __init__.py  mask_exporter.py
src/event_selector/infrastructure/import/: __init__.py  mask_importer.py
src/event_selector/infrastructure/imports/: __init__.py
src/event_selector/infrastructure/logging/: __init__.py  setup.py
src/event_selector/infrastructure/parser/: __init__.py  yaml_parser.py
src/event_selector/infrastructure/persistence/: __init__.py  session_manager.py
src/event_selector/presentation/: __init__.py
src/event_selector/presentation/gui/: __init__.py  _main_window.py  main_window.py
src/event_selector/presentation/gui/controllers/: __init__.py  menu_controller.py  project_controller.py  toolbar_controller.py
src/event_selector/presentation/gui/dialogs/: __init__.py
src/event_selector/presentation/gui/view_models/: __init__.py  project_vm.py
src/event_selector/presentation/gui/views/: __init__.py  project_view.py  subtab_view.py
src/event_selector/presentation/gui/widgets/: __init__.py  event_subtab.py  event_table.py  mode_switch.py  problems_dock.py  subtab_toolbar.py
src/event_selector/shared/: __init__.py  exceptions.py  types.py
src/event_selector/utils/: __init__.py  autosave.py  config.py  constants.py  logging.py  paths.py
tests/property/: test_parser_properties.py
tests/unit/cli/: test_app.py
tests/unit/core/: test_exporter.py  test_importer.py  test_models.py  test_parser.py  test_validator.py
tests/unit/gui/: test_main_window.py
tests/unit/utils/: test_autosave.py  test_config.py  test_paths.py
